Revert "Stop using `text-overflow: ellipse`"
This reverts commit 5fb5781b019982fe105d965c1818fb5bd468bbfd.

--- a/content/_section-footer.scss
+++ b/content/_section-footer.scss
@@ -8,6 +8,8 @@
   width: 100%;
 
   p {
+    @extend %ellipsing;
+
     margin-top: 0;
   }
 
